--- a/Seminar_1/index.html
+++ b/Seminar_1/index.html
@@ -1,5 +1,41 @@
 <!DOCTYPE html>
-<html>
-
-
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ДЗ Семинар 1</title>
+  </head>
+  <body>
+        <p>Меню сайта</p>
+        <a href="index.html">Главная</a>
+        <a href="catalog.html">Каталог</a>
+        <a href="contacts.html">Контакты</a>
+  </body>
 </html>
+
+
+Добавить меню сайта ( должно быть на каждой странице, оно должно быть одинаковым)
+a. 
+b. 
+c. 
+
+Создать заголовок h1 с текстом “Главная страница”
+Добавить параграф p с произвольным текстом (lorem) (используем расширение emmet уже установленное в vsc, для этого вводим lorem и нажимаем клавишу tab)
+Создать подзаголовок h2 с текстом “Добро пожаловать на сайт”
+Добавить три параграф p с произвольным текстом (lorem)
+Рядом с файлом index.html создать папку catalog
+Внутри папки catalog создать файл catalog.html
+На странице “каталог” добавить структуру html документа
+Добавить меню сайта (такое же как на главной странице)
+Добавить Заголовок h1 с текстом “Каталог”
+Создать параграф p с произвольным текстом из 150 слов для этого вводим “lorem150” и нажимаем tab
+Сделать переходы с главной страницы на страницу каталог, при нажатии на меню сайта и переход со страницы каталог на главную страницу
+Создать папку img и разместить ее рядом с index.html
+Добавить в папку img произвольные фотографии товаров, по вашей тематике можно выбрать любое фото https://www.freepik.com/search?format=search&orientation=portrait&query=products
+На странице “Каталог” после заголовка h1 и параграфа p добавить
+a. Изображение товара
+b. Название товара
+c. Описасние товара
+
+Добавить 3 таких товара на страницу каталога (не следует добавлять более 3х товаров)
