--- a/Seminar_1/catalog/catalog.html
+++ b/Seminar_1/catalog/catalog.html
@@ -7,9 +7,9 @@
     <title>ДЗ Семинар 1</title>
   </head>
   <body>
-        <p>Меню сайта</p>
-        <a href="index.html">Главная</a>
-        <a href="catalog.html">Каталог</a>
-        <a href="contacts.html">Контакты</a>
+    <p>Меню сайта</p>
+    <p><a href="../index.html">Главная</a></p>
+    <p><a href="catalog.html">Каталог</a></p>
+    <p><a href="../contacts.html">Контакты</a></p>
   </body>
 </html>
