--- a/Seminar_1/index.html
+++ b/Seminar_1/index.html
@@ -8,23 +8,18 @@
   </head>
   <body>
         <p>Меню сайта</p>
-        <a href="index.html">Главная</a>
-        <a href="catalog.html">Каталог</a>
-        <a href="contacts.html">Контакты</a>
+        <p><a href="index.html">Главная</a></p>
+        <p><a href="catalog/catalog.html">Каталог</a></p>
+        <p><a href="contacts.html">Контакты</a></p>
+        <h1>Главная страница</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat ex perferendis cupiditate aut, ipsum illum facere minus quam natus accusamus?</p>
+        <h2>Добро пожаловать на сайт</h2>
+        <p>Lorem ipsum dolor sit.</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
   </body>
 </html>
 
-
-Добавить меню сайта ( должно быть на каждой странице, оно должно быть одинаковым)
-a. 
-b. 
-c. 
-
-Создать заголовок h1 с текстом “Главная страница”
-Добавить параграф p с произвольным текстом (lorem) (используем расширение emmet уже установленное в vsc, для этого вводим lorem и нажимаем клавишу tab)
-Создать подзаголовок h2 с текстом “Добро пожаловать на сайт”
-Добавить три параграф p с произвольным текстом (lorem)
-Рядом с файлом index.html создать папку catalog
 Внутри папки catalog создать файл catalog.html
 На странице “каталог” добавить структуру html документа
 Добавить меню сайта (такое же как на главной странице)
