Выполнил все пункты домашнего задания

--- a/Seminar_1/catalog/catalog.html
+++ b/Seminar_1/catalog/catalog.html
@@ -4,12 +4,44 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ДЗ Семинар 1</title>
+    <title>Каталог</title>
   </head>
   <body>
     <p>Меню сайта</p>
     <p><a href="../index.html">Главная</a></p>
     <p><a href="catalog.html">Каталог</a></p>
     <p><a href="../contacts.html">Контакты</a></p>
+    <h1>Каталог</h1>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus quidem,
+      nisi culpa officiis voluptate alias ea! Corporis maxime recusandae
+      voluptas corrupti. Laboriosam praesentium amet accusamus doloremque ad in
+      ratione nostrum repellat, asperiores est fugiat expedita. Ipsum rerum
+      magnam pariatur cumque nostrum laborum quam ipsam porro saepe recusandae,
+      quasi beatae consectetur ratione quis maxime voluptatibus accusamus
+      cupiditate sit sunt. Officiis obcaecati asperiores sit neque itaque non
+      magni, est adipisci aliquid ea sunt porro consectetur soluta autem natus
+      tempore ipsum iure cumque odit cupiditate animi tenetur quaerat molestias
+      sint. Suscipit odit eligendi recusandae rem necessitatibus, provident
+      fugit culpa tenetur vero delectus quaerat doloribus quos consectetur iste
+      libero dolorum ea quia. Ab, autem libero! Quaerat libero id iusto,
+      corrupti rem atque consectetur aspernatur. Dolorem inventore odio minima
+      earum quos saepe officia consectetur, doloremque qui eum nisi at cumque
+      distinctio sit, corrupti, deserunt velit rem doloribus numquam. Nihil
+      consequatur minima nulla aperiam molestias ut.
+    </p>
+    <hr>
+    <p>sheep</p>
+    <p><img src="../img/sheep.jpg" alt="Барашки" width="125"></p>
+    <p>Барашки</p>
+    <hr>
+    <p>sunflower</p>
+    <p><img src="../img/sunflower.jpg" alt="Подсолнухи" width="125"></p>
+    <p>Подсолнухи</p>
+    <hr>
+    <p>wheat</p>
+    <p><img src="../img/wheat.jpg" alt="Пшеница" width="125"></p>
+    <p>Пшеница</p>
+    <hr>
   </body>
 </html>
