--- a/Seminar_1/contacts.html
+++ b/Seminar_1/contacts.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ДЗ Семинар 1</title>
+    <title>Контакты</title>
   </head>
   <body>
     <p>Меню сайта</p>
     <p><a href="index.html">Главная</a></p>
     <p><a href="catalog/catalog.html">Каталог</a></p>
     <p><a href="contacts.html">Контакты</a></p>
+    <h2>Этот раздел не оформлен.</h2>
   </body>
 </html>
