--- a/Seminar_2/catalog/catalog.html
+++ b/Seminar_2/catalog/catalog.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../style.css">
     <title>Каталог</title>
   </head>
   <body>
     <p>Меню сайта</p>
-    <p><a href="../index.html">Главная</a></p>
-    <p><a href="catalog.html">Каталог</a></p>
-    <p><a href="../contacts.html">Контакты</a></p>
+    <p><a class="navigation" href="../index.html">Главная</a></p>
+    <p><a class="navigation" href="catalog.html">Каталог</a></p>
+    <p><a class="navigation" href="../contacts.html">Контакты</a></p>
     <h1>Каталог</h1>
     <p>
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus quidem,
