--- a/Seminar_2/contacts.html
+++ b/Seminar_2/contacts.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css">
     <title>Контакты</title>
   </head>
   <body>
     <p>Меню сайта</p>
-    <p><a href="index.html">Главная</a></p>
-    <p><a href="catalog/catalog.html">Каталог</a></p>
-    <p><a href="contacts.html">Контакты</a></p>
+    <p><a class="navigation" href="index.html">Главная</a></p>
+    <p><a class="navigation" href="catalog/catalog.html">Каталог</a></p>
+    <p><a class="navigation" href="contacts.html">Контакты</a></p>
     <h2>Этот раздел не оформлен.</h2>
   </body>
 </html>
