--- a/Seminar_2/index.html
+++ b/Seminar_2/index.html
@@ -4,18 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>ДЗ Семинар 1</title>
   </head>
   <body>
-        <p>Меню сайта</p>
-        <p><a href="index.html">Главная</a></p>
-        <p><a href="catalog/catalog.html">Каталог</a></p>
-        <p><a href="contacts.html">Контакты</a></p>
-        <h1>Главная страница</h1>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat ex perferendis cupiditate aut, ipsum illum facere minus quam natus accusamus?</p>
-        <h2>Добро пожаловать на сайт</h2>
-        <p>Lorem ipsum dolor sit.</p>
-        <p>Lorem ipsum dolor sit amet.</p>
-        <p>Lorem ipsum dolor sit amet consectetur.</p>
+    <p>Меню сайта</p>
+    <ol class="navigation">
+      <li><p><a href="index.html">Главная</a></p></li>
+      <li><p><a href="catalog/catalog.html">Каталог</a></p></li>
+      <li><p><a href="contacts.html">Контакты</a></p></li>
+    </ol>
+    <h1>Главная страница</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat ex
+      perferendis cupiditate aut, ipsum illum facere minus quam natus accusamus?
+    </p>
+    <h2>Добро пожаловать на сайт</h2>
+    <p>Lorem ipsum dolor sit.</p>
+    <p>Lorem ipsum dolor sit amet.</p>
+    <p>Lorem ipsum dolor sit amet consectetur.</p>
   </body>
+  <!--<style>
+    h1 {
+      color: red;
+    }
+  </style> -->
 </html>
