--- a/Seminar_2/catalog/catalog.html
+++ b/Seminar_2/catalog/catalog.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style.css" />
     <title>Каталог</title>
   </head>
   <body>
-    <p>Меню сайта</p>
-    <p><a class="navigation" href="../index.html">Главная</a></p>
-    <p><a class="navigation" href="catalog.html">Каталог</a></p>
-    <p><a class="navigation" href="../contacts.html">Контакты</a></p>
+    <p class="paragraph">Меню сайта</p>
+    <p class="paragraph">
+      <a class="navigation" href="../index.html">Главная</a>
+    </p>
+    <p class="paragraph">
+      <a class="navigation" href="catalog.html">Каталог</a>
+    </p>
+    <p class="paragraph">
+      <a class="navigation" href="../contacts.html">Контакты</a>
+    </p>
     <h1>Каталог</h1>
-    <p>
+    <p class="paragraph">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus quidem,
       nisi culpa officiis voluptate alias ea! Corporis maxime recusandae
       voluptas corrupti. Laboriosam praesentium amet accusamus doloremque ad in
@@ -31,18 +37,24 @@
       distinctio sit, corrupti, deserunt velit rem doloribus numquam. Nihil
       consequatur minima nulla aperiam molestias ut.
     </p>
-    <hr>
-    <p>sheep</p>
-    <p><img src="../img/sheep.jpg" alt="Барашки" width="125"></p>
-    <p>Барашки</p>
-    <hr>
-    <p>sunflower</p>
-    <p><img src="../img/sunflower.jpg" alt="Подсолнухи" width="125"></p>
-    <p>Подсолнухи</p>
-    <hr>
-    <p>wheat</p>
-    <p><img src="../img/wheat.jpg" alt="Пшеница" width="125"></p>
-    <p>Пшеница</p>
-    <hr>
+    <hr />
+    <p class="paragraph">sheep</p>
+    <p class="paragraph">
+      <img src="../img/sheep.jpg" alt="Барашки" width="125" />
+    </p>
+    <p class="paragraph">Барашки</p>
+    <hr />
+    <p class="paragraph">sunflower</p>
+    <p class="paragraph">
+      <img src="../img/sunflower.jpg" alt="Подсолнухи" width="125" />
+    </p>
+    <p class="paragraph">Подсолнухи</p>
+    <hr />
+    <p class="paragraph">wheat</p>
+    <p class="paragraph">
+      <img src="../img/wheat.jpg" alt="Пшеница" width="125" />
+    </p>
+    <p class="paragraph">Пшеница</p>
+    <hr />
   </body>
 </html>
