--- a/Seminar_2/index.html
+++ b/Seminar_2/index.html
@@ -8,21 +8,32 @@
     <title>ДЗ Семинар 1</title>
   </head>
   <body>
-    <p>Меню сайта</p>
+    <p class="paragraph">Меню сайта</p>
     <ol class="navigation">
-      <li><p><a href="index.html">Главная</a></p></li>
-      <li><p><a href="catalog/catalog.html">Каталог</a></p></li>
-      <li><p><a href="contacts.html">Контакты</a></p></li>
+      <li>
+        <p class="paragraph"><a href="index.html">Главная</a></p>
+      </li>
+      <li>
+        <p class="paragraph"><a href="catalog/catalog.html">Каталог</a></p>
+      </li>
+      <li>
+        <p class="paragraph"><a href="contacts.html">Контакты</a></p>
+      </li>
     </ol>
     <h1>Главная страница</h1>
-    <p>
+    <p class="paragraph">
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Placeat ex
       perferendis cupiditate aut, ipsum illum facere minus quam natus accusamus?
     </p>
     <h2>Добро пожаловать на сайт</h2>
-    <p>Lorem ipsum dolor sit.</p>
-    <p>Lorem ipsum dolor sit amet.</p>
-    <p>Lorem ipsum dolor sit amet consectetur.</p>
+    <p class="paragraph">Lorem ipsum dolor sit.</p>
+    <p class="paragraph">Lorem ipsum dolor sit amet.</p>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur.</p>
+  <form action="Регистрация">
+    <input type="text" placeholder="Введите имя" class="inp"><br>
+    <button class="button" type="submit">Отправить</button><br>
+    <button class="button" type="reset">Удалить</button>
+  </form>
   </body>
   <!--<style>
     h1 {
