--- a/Seminar_2/contacts.html
+++ b/Seminar_2/contacts.html
@@ -4,14 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Контакты</title>
   </head>
   <body>
-    <p>Меню сайта</p>
-    <p><a class="navigation" href="index.html">Главная</a></p>
-    <p><a class="navigation" href="catalog/catalog.html">Каталог</a></p>
-    <p><a class="navigation" href="contacts.html">Контакты</a></p>
-    <h2>Этот раздел не оформлен.</h2>
+    <p class="paragraph">Меню сайта</p>
+    <p class="paragraph"><a class="navigation" href="index.html">Главная</a></p>
+    <p class="paragraph">
+      <a class="navigation" href="catalog/catalog.html">Каталог</a>
+    </p>
+    <p class="paragraph">
+      <a class="navigation" href="contacts.html">Контакты</a>
+    </p>
+    <h2 class="tittle2">Этот раздел не оформлен.</h2>
   </body>
 </html>
