Семинар 3 верстаем макет, добавили блоки, картинки

--- a/Seminar_3/index.html
+++ b/Seminar_3/index.html
@@ -8,8 +8,39 @@
     <title>ДЗ Семинар 3</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
 
-
+    <main>
+      <section>
+        <div>
+          <h2>Next genaretion platform</h2>
+          <h1>Artificial intelligence & Syber security</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
+            sunt iste dicta natus id enim harum consequuntur architecto quod
+            amet?
+          </p>
+          <div>
+            <button>Get Started</button>
+            <button>Watch Video</button>
+          </div>
+        </div>
+        <img src="img/main.png" alt="Main pic" />
+      </section>
+    </main>
+    <footer>
+      <img src="img/logo1.png" alt="logo1">
+      <img src="img/logo2.png" alt="logo2">
+      <img src="img/logo3.png" alt="logo3">
+      <img src="img/logo4.png" alt="logo4">
+    </footer>
   </body>
-    
 </html>
