--- a/Seminar_3/index.html
+++ b/Seminar_3/index.html
@@ -9,38 +9,45 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
-      </nav>
+      <div class="container">
+        <nav>
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Services</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+        </nav>
+      </div>
     </header>
 
     <main>
-      <section>
-        <div>
-          <h2>Next genaretion platform</h2>
-          <h1>Artificial intelligence & Syber security</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium
-            sunt iste dicta natus id enim harum consequuntur architecto quod
-            amet?
-          </p>
+      <div class="container">
+        <section>
           <div>
-            <button>Get Started</button>
-            <button>Watch Video</button>
+            <h2>Next genaretion platform</h2>
+            <h1>Artificial intelligence & Syber security</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Laudantium sunt iste dicta natus id enim harum consequuntur
+              architecto quod amet?
+            </p>
+            <div>
+              <button>Get Started</button>
+              <button>Watch Video</button>
+            </div>
           </div>
-        </div>
-        <img src="img/main.png" alt="Main pic" />
-      </section>
+          <img src="img/main.png" alt="Main pic" />
+        </section>
+      </div>
     </main>
+
     <footer>
-      <img src="img/logo1.png" alt="logo1">
-      <img src="img/logo2.png" alt="logo2">
-      <img src="img/logo3.png" alt="logo3">
-      <img src="img/logo4.png" alt="logo4">
+      <div class="container">
+        <img src="img/logo1.png" alt="logo1" />
+        <img src="img/logo2.png" alt="logo2" />
+        <img src="img/logo3.png" alt="logo3" />
+        <img src="img/logo4.png" alt="logo4" />
+      </div>
     </footer>
   </body>
 </html>
