--- a/Seminar_3/index.html
+++ b/Seminar_3/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="container">
-        <nav>
+        <nav class="nav">
           <a href="#">Home</a>
           <a href="#">About</a>
           <a href="#">Services</a>
