--- a/Seminar_3/index.html
+++ b/Seminar_3/index.html
@@ -25,7 +25,7 @@
         <section>
           <div>
             <h2>Next genaretion platform</h2>
-            <h1>Artificial intelligence & Syber security</h1>
+            <h1>Artificial intelligence \& Syber security</h1>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Laudantium sunt iste dicta natus id enim harum consequuntur
