--- a/Seminar_2/index.html
+++ b/Seminar_2/index.html
@@ -30,14 +30,9 @@
     <p class="paragraph">Lorem ipsum dolor sit amet.</p>
     <p class="paragraph">Lorem ipsum dolor sit amet consectetur.</p>
   <form action="Регистрация">
-    <input type="text" placeholder="Введите имя" class="inp"><br>
-    <button class="button" type="submit">Отправить</button><br>
-    <button class="button" type="reset">Удалить</button>
+    <input type="text" placeholder="Введите имя" class="inpt"><br>
+    <button class="btn" type="submit">Отправить</button><br>
+    <button class="btn" type="reset">Удалить</button>
   </form>
   </body>
-  <!--<style>
-    h1 {
-      color: red;
-    }
-  </style> -->
 </html>
