--- a/Seminar_2/catalog/catalog.html
+++ b/Seminar_2/catalog/catalog.html
@@ -9,15 +9,18 @@
   </head>
   <body>
     <p class="paragraph">Меню сайта</p>
-    <p class="paragraph">
+    <ol class="navigation">
+      <li><p class="paragraph">
       <a class="navigation" href="../index.html">Главная</a>
-    </p>
-    <p class="paragraph">
+    </p></li>
+      <li><p class="paragraph">
       <a class="navigation" href="catalog.html">Каталог</a>
-    </p>
-    <p class="paragraph">
+    </p></li>
+      <li><p class="paragraph">
       <a class="navigation" href="../contacts.html">Контакты</a>
-    </p>
+    </p></li>
+        
+  </ol>
     <h1>Каталог</h1>
     <p class="paragraph">
       Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ducimus quidem,
@@ -56,5 +59,5 @@
     </p>
     <p class="paragraph">Пшеница</p>
     <hr />
-  </body>
+  </ol>
 </html>
