--- a/Seminar_4/Urok4/index.html
+++ b/Seminar_4/Urok4/index.html
@@ -5,51 +5,48 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Seminar 3</title>
+    <title>ДЗ Семинар 3</title>
   </head>
   <body>
     <header>
       <div class="container">
-        <img class="main_logo" src="img/Logo_main.png" alt="Logo_main" />
         <nav class="nav">
           <a href="#">Home</a>
-          <a href="#">About Us</a>
+          <a href="#">About</a>
           <a href="#">Services</a>
-          <a href="#">Features</a>
-          <a href="#">Team</a>
           <a href="#">Blog</a>
           <a href="#">Contact</a>
         </nav>
       </div>
     </header>
+
     <main>
       <div class="container">
         <section>
           <div>
-            <h1 class="h1_seo">SEO \& Digital Marketing For Your Website.</h1>
-            <p class="paragraph_main">
-              Provide all kind of seo services and help to improve seo ranking.
-              Globally incubate standards.
+            <h2>Next genaretion platform</h2>
+            <h1>Artificial intelligence \& Syber security</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Laudantium sunt iste dicta natus id enim harum consequuntur
+              architecto quod amet?
             </p>
+            <div>
+              <button>Get Started</button>
+              <button>Watch Video</button>
+            </div>
           </div>
-          <div>
-            <button class="button_start">
-              <img src="img/Button_start.png" alt="Button_start" />
-            </button>
-            <button class="button_video">Watch Video</button>
-          </div>
-          <img class="main" src="img/main.png" alt="main" />
+          <img src="img/main.png" alt="Main pic" />
         </section>
       </div>
     </main>
+
     <footer>
       <div class="container">
-        <img src="img/footer_logo1.png" alt="footer_logo1">
-        <img src="img/footer_logo2.png" alt="footer_logo2">
-        <img src="img/footer_logo3.png" alt="footer_logo3">
-        <img src="img/footer_logo4.png" alt="footer_logo4">
-        <img src="img/footer_logo5.png" alt="footer_logo5">
-        <img src="img/footer_logo6.png" alt="footer_logo6">
+        <img src="img/logo1.png" alt="logo1" />
+        <img src="img/logo2.png" alt="logo2" />
+        <img src="img/logo3.png" alt="logo3" />
+        <img src="img/logo4.png" alt="logo4" />
       </div>
     </footer>
   </body>
