Семинар 4 Урок доднлали сайт по макету

--- a/Seminar_4/Urok4/index.html
+++ b/Seminar_4/Urok4/index.html
@@ -22,7 +22,7 @@
 
     <main>
       <div class="container">
-        <section>
+        <section class="section">
           <div>
             <h2>Next genaretion platform</h2>
             <h1>Artificial intelligence \& Syber security</h1>
@@ -31,7 +31,7 @@
               Laudantium sunt iste dicta natus id enim harum consequuntur
               architecto quod amet?
             </p>
-            <div>
+            <div class="btn">
               <button>Get Started</button>
               <button>Watch Video</button>
             </div>
@@ -42,7 +42,7 @@
     </main>
 
     <footer>
-      <div class="container">
+      <div class="container footer">
         <img src="img/logo1.png" alt="logo1" />
         <img src="img/logo2.png" alt="logo2" />
         <img src="img/logo3.png" alt="logo3" />
