Семинар 4 ДЗ flex Сдал

--- a/Seminar_4/HomeWork4/index.html
+++ b/Seminar_4/HomeWork4/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Seminar 3</title>
+    <title>Seminar 4</title>
   </head>
   <body>
     <header>
@@ -28,17 +28,17 @@
       <div class="container">
         <section>
           <div>
-            <h1 class="h1_seo">SEO \& Digital Marketing For Your Website.</h1>
-            <p class="paragraph_main">
-              Provide all kind of seo services and help to improve seo ranking.
-              Globally incubate standards.
-            </p>
-          </div>
-          <div>
-            <button class="button_start">
-              <img src="img/Button_start.png" alt="Button_start" />
-            </button>
-            <button class="button_video">Watch Video</button>
+            <div>
+              <h1 class="h1_seo">SEO \& Digital Marketing For Your Website.</h1>
+              <p class="paragraph_main">
+                Provide all kind of seo services and help to improve seo
+                ranking. Globally incubate standards.
+              </p>
+            </div>
+            <div class="button">
+              <a class="button_start" href="#"> Start now </a>
+              <a class="button_video" href="#">Watch Video</a>
+            </div>
           </div>
           <img class="main" src="img/main.png" alt="main" />
         </section>
@@ -46,12 +46,14 @@
     </main>
     <footer>
       <div class="container">
-        <img src="img/footer_logo1.png" alt="footer_logo1" />
-        <img src="img/footer_logo2.png" alt="footer_logo2" />
-        <img src="img/footer_logo3.png" alt="footer_logo3" />
-        <img src="img/footer_logo4.png" alt="footer_logo4" />
-        <img src="img/footer_logo5.png" alt="footer_logo5" />
-        <img src="img/footer_logo6.png" alt="footer_logo6" />
+        <div class="footer_logo">
+          <img src="img/footer_logo1.png" alt="footer_logo1" />
+          <img src="img/footer_logo2.png" alt="footer_logo2" />
+          <img src="img/footer_logo3.png" alt="footer_logo3" />
+          <img src="img/footer_logo4.png" alt="footer_logo4" />
+          <img src="img/footer_logo5.png" alt="footer_logo5" />
+          <img src="img/footer_logo6.png" alt="footer_logo6" />
+        </div>
       </div>
     </footer>
   </body>
