Семинар 5 ДЗ середина

--- a/Seminar_5/HomeWork5/index.html
+++ b/Seminar_5/HomeWork5/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Seminar 4</title>
+    <title>Seminar 5</title>
   </head>
   <body>
     <header>
@@ -56,6 +56,47 @@
         </div>
       </div>
     </article>
-
+    <div class="container">
+      <div class="features">
+        <div class="features_item1">
+          <img src="img/icon1.png" alt="icon1" />
+          <h3 class="features_h3">Grow Your Business</h3>
+          <p>
+            Leverage agile frameworks to provide a robust synopsis for high
+            level overviews.
+          </p>
+          <p class="read_more">Read More...</p>
+        </div>
+        <div class="features_item2">
+          <img src="img/icon2.png" alt="icon2" />
+          <h3 class="features_h3">Get Quality Ieads</h3>
+          <p>
+            Leverage agile frameworks to provide a robust synopsis for high
+            level overviews.
+          </p>
+          <p class="read_more">Read More...</p>
+        </div>
+        <div class="features_item3">
+          <img src="img/icon3.png" alt="icon3" />
+          <h3 class="features_h3">Drive More Sales</h3>
+          <p>
+            Leverage agile frameworks to provide a robust synopsis for high
+            level overviews.
+          </p>
+          <p class="read_more">Read More...</p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="services">
+        <h1>Why You Should Choose Us.</h1>
+        <p>
+          Distinctively exploit optimal alignments for intuitive bandwidth.
+          Quickly coordinate e-business applications through revolutionary
+          catalysts.
+        </p>
+        <div></div>
+      </div>
+    </div>
   </body>
 </html>
