Семинар 5 ДЗ середина

--- a/Seminar_5/HomeWork5/index.html
+++ b/Seminar_5/HomeWork5/index.html
@@ -88,14 +88,33 @@
       </div>
     </div>
     <div class="container">
-      <div class="services">
-        <h1>Why You Should Choose Us.</h1>
-        <p>
-          Distinctively exploit optimal alignments for intuitive bandwidth.
-          Quickly coordinate e-business applications through revolutionary
-          catalysts.
-        </p>
-        <div></div>
+      <div>
+        <div class="services">
+          <h1>Why You Should Choose Us.</h1>
+          <p>
+            Distinctively exploit optimal alignments for intuitive bandwidth.
+            Quickly coordinate e-business applications through revolutionary
+            catalysts.
+          </p>
+        </div>
+
+        <div class="services2">
+          <div class="services2_item1">
+            <img src="img/servies_logo1.png" alt="servies_logo1" />
+            <h3></h3>
+            <p></p>
+          </div>
+          <div class="services2_item2">
+            <img src="img/servies_logo2.png" alt="servies_logo2" />
+            <h3></h3>
+            <p></p>
+          </div>
+          <div class="services2_item3">
+            <img src="img/servies_logo3.png" alt="servies_logo3" />
+            <h3></h3>
+            <p></p>
+          </div>
+        </div>
       </div>
     </div>
   </body>
