Семинар 5 ДЗ сделал

--- a/Seminar_5/HomeWork5/index.html
+++ b/Seminar_5/HomeWork5/index.html
@@ -88,7 +88,7 @@
       </div>
     </div>
     <div class="container">
-      <div>
+      <div class="services_background">
         <div class="services">
           <h1>Why You Should Choose Us.</h1>
           <p>
@@ -101,18 +101,30 @@
         <div class="services2">
           <div class="services2_item1">
             <img src="img/servies_logo1.png" alt="servies_logo1" />
-            <h3></h3>
-            <p></p>
+            <h3>Keyword Research</h3>
+            <p>
+              Business applications through revolutionary catalysts for chang
+              the Seamlessly underwhelm dures.
+            </p>
+            <button>Learn More</button>
           </div>
           <div class="services2_item2">
             <img src="img/servies_logo2.png" alt="servies_logo2" />
-            <h3></h3>
-            <p></p>
+            <h3>Seo Optimazadion</h3>
+            <p>
+              Business applications through revolutionary catalysts for chang
+              the Seamlessly underwhelm dures.
+            </p>
+            <button>Learn More</button>
           </div>
           <div class="services2_item3">
             <img src="img/servies_logo3.png" alt="servies_logo3" />
-            <h3></h3>
-            <p></p>
+            <h3>Social Marketing</h3>
+            <p>
+              Business applications through revolutionary catalysts for chang
+              the Seamlessly underwhelm dures.
+            </p>
+            <button>Learn More</button>
           </div>
         </div>
       </div>
