--- a/Seminar_6/HomeWorks6/index.html
+++ b/Seminar_6/HomeWorks6/index.html
@@ -22,9 +22,22 @@
           </div>
         </nav>
 
-        <div class="header_main"></div>
+        <div class="header_main">
+          <div>
+            <img src="img/man-main.png" alt="man-main" />
+          </div>
+          <div>
+            <div class="brand_text">
+              <div class="border">
+                <h1>THE BRAND</h1>
+                <h2>OF LUXERIOUS <span>FASHION</span></h2>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </header>
+
     <main>
       <div class="container">
         <section></section>
