--- a/Seminar_6/Urok/index.html
+++ b/Seminar_6/Urok/index.html
@@ -24,7 +24,7 @@
 				<section class="main-section">
 					<div class="main-section__description">
 						<h2 class="main-title-h2">Next genaretion platform</h2>
-						<h1 class="main-title-h1">Artificial intelligence & Syber security</h1>
+						<h1 class="main-title-h1">Artificial intelligence \& Syber security</h1>
 						<p class="main-text">
 							Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for
 							previewing layouts and visual mockups.
