Семинар 6 ДЗ почти сделал

--- a/Seminar_6/HomeWorks6/index.html
+++ b/Seminar_6/HomeWorks6/index.html
@@ -40,9 +40,122 @@
 
     <main>
       <div class="container">
-        <section></section>
+        <div class="main_content">
+          <section class="section_content">
+            <div>
+              <div class="top_content">
+                <div class="top_content_item1">
+                  <img src="img/main_img1.png" alt="main_img1" />
+                  <p>30% OFF<br /><span class="span_color">FOR WOMEN</span></p>
+                </div>
+                <div class="top_content_item2">
+                  <img src="img/main_img2.png" alt="main_img2" />
+                  <p>HOT DEAL<br /><span class="span_color">FOR MEN</span></p>
+                </div>
+                <div class="top_content_item3">
+                  <img src="img/main_img3.png" alt="main_img3" />
+                  <p>
+                    NEW ARRIVALS<br /><span class="span_color">FOR KIDS</span>
+                  </p>
+                </div>
+              </div>
+              <div class="top_content_item4">
+                <img src="img/main_img4.png" alt="main_img4" />
+                <p>
+                  LUXIROUS & TRENDY <br />
+                  <span class="span_color">ACCESORIES</span>
+                </p>
+              </div>
+
+              <div class="bottom_content_item">
+                <h2>Fetured Items</h2>
+                <p>Shop for items based on what we featured in this week</p>
+              </div>
+              <div class="bottom_content">
+                <div class="bottom_content_item1">
+                  <img src="img/fetured_items1.png" alt="fetured_items1" />
+                  <div>
+                    <h2>ELLERY X M'O CAPSULE</h2>
+                    <p>
+                      Known for her sculptural takes on traditional tailoring,
+                      Australian arbiter of cool Kym Ellery teams up with Moda
+                      Operandi.
+                    </p>
+                    <span class="span_color">52$</span>
+                  </div>
+                </div>
+
+                <div class="bottom_content_item2">
+                  <img src="img/fetured_items2.png" alt="fetured_items2" />
+                  <div>
+                    <h2>ELLERY X M'O CAPSULE</h2>
+                    <p>
+                      Known for her sculptural takes on traditional tailoring,
+                      Australian arbiter of cool Kym Ellery teams up with Moda
+                      Operandi.
+                    </p>
+                    <span class="span_color">52$</span>
+                  </div>
+                </div>
+
+                <div class="bottom_content_item3">
+                  <img src="img/fetured_items3.png" alt="fetured_items3" />
+                  <div>
+                    <h2>ELLERY X M'O CAPSULE</h2>
+                    <p>
+                      Known for her sculptural takes on traditional tailoring,
+                      Australian arbiter of cool Kym Ellery teams up with Moda
+                      Operandi.
+                    </p>
+                    <span class="span_color">52$</span>
+                  </div>
+                </div>
+
+                <div class="bottom_content_item4">
+                  <img src="img/fetured_items4.png" alt="fetured_items4" />
+                  <div>
+                    <h2>ELLERY X M'O CAPSULE</h2>
+                    <p>
+                      Known for her sculptural takes on traditional tailoring,
+                      Australian arbiter of cool Kym Ellery teams up with Moda
+                      Operandi.
+                    </p>
+                    <span class="span_color">52$</span>
+                  </div>
+                </div>
+
+                <div class="bottom_content_item5">
+                  <img src="img/fetured_items5.png" alt="fetured_items5" />
+                  <div>
+                    <h2>ELLERY X M'O CAPSULE</h2>
+                    <p>
+                      Known for her sculptural takes on traditional tailoring,
+                      Australian arbiter of cool Kym Ellery teams up with Moda
+                      Operandi.
+                    </p>
+                    <span class="span_color">52$</span>
+                  </div>
+                </div>
+
+                <div class="bottom_content_item6">
+                  <img src="img/fetured_items6.png" alt="fetured_items6" />
+                  <div>
+                    <h2>ELLERY X M'O CAPSULE</h2>
+                    <p>
+                      Known for her sculptural takes on traditional tailoring,
+                      Australian arbiter of cool Kym Ellery teams up with Moda
+                      Operandi.
+                    </p>
+                    <span class="span_color">52$</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
       </div>
     </main>
+
     <article>
       <div class="container"></div>
     </article>
