Семинар 6 ДЗ сделал

--- a/Seminar_6/HomeWorks6/index.html
+++ b/Seminar_6/HomeWorks6/index.html
@@ -152,12 +152,17 @@
               </div>
             </div>
           </section>
+
+          <div class="container">
+            <article class="bottom_btn">
+              <div>
+                <button><p>Browse All Product</p></button>
+              </div>
+            </article>
+          </div>
         </div>
+        
       </div>
     </main>
-
-    <article>
-      <div class="container"></div>
-    </article>
   </body>
 </html>
