--- a/Seminar_8/HomeWorks8/index.html
+++ b/Seminar_8/HomeWorks8/index.html
@@ -17,8 +17,8 @@
           </div>
           <div class="nav_item2">
             <img src="img/nav1.png" alt="nav1" />
-            <img src="img/nav2.png" alt="nav2" />
-            <img src="img/nav3.png" alt="nav3" />
+            <img class="nav_tem2_block" src="img/nav2.png" alt="nav2" />
+            <img class="nav_tem2_block" src="img/nav3.png" alt="nav3" />
             <div class="nav_basket"><p>5</p></div>
           </div>
         </nav>
