--- a/Seminar_9/HomeWorks9/index.html
+++ b/Seminar_9/HomeWorks9/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>HomeWorks 8</title>
+    <title>HomeWorks 9</title>
   </head>
   <body>
     <header>
@@ -22,7 +22,8 @@
             <div class="nav_basket"><p>5</p></div>
           </div>
         </nav>
-
+      </div>
+      <div class="container">
         <div class="header_main">
           <div>
             <img src="img/man-main.png" alt="man-main" />
@@ -162,5 +163,44 @@
         </div>
       </div>
     </main>
+
+    <footer>
+      <div class="container">
+        <section class="section_item1">
+          <article>
+            <div>
+              <img src="img/Footer_img1.png" alt="Footer_img1" />
+              <h2>Free Delivery</h2>
+              <p>
+                Worldwide delivery on all. Authorit tively morph next-generation
+                innov tion with extensive models.
+              </p>
+            </div>
+          </article>
+          <article>
+            <div>
+              <img src="img/Footer_img2.png" alt="Footer_img2" />
+              <h2>Sales & discounts</h2>
+              <p>
+                Worldwide delivery on all. Authorit tively morph next-generation
+                innov tion with extensive models.
+              </p>
+            </div>
+          </article>
+          <article>
+            <div>
+              <img src="img/Footer_img3.png" alt="Footer_img3" />
+              <h2>Quality assurance</h2>
+              <p>
+                Worldwide delivery on all. Authorit tively morph next-generation
+                innov tion with extensive models.
+              </p>
+            </div>
+          </article>
+        </section>
+        <section class="section_item2"></section>
+        <section class="section_item3"></section>
+      </div>
+    </footer>
   </body>
 </html>
