--- a/Seminar_9/HomeWorks9/index.html
+++ b/Seminar_9/HomeWorks9/index.html
@@ -64,7 +64,7 @@
               <div class="top_content_item4">
                 <img src="img/main_img4.png" alt="main_img4" />
                 <p>
-                  LUXIROUS & TRENDY <br />
+                  LUXIROUS &#38; TRENDY <br />
                   <span class="span_color">ACCESORIES</span>
                 </p>
               </div>
@@ -180,7 +180,7 @@
           <article>
             <div>
               <img src="img/Footer_img2.png" alt="Footer_img2" />
-              <h2>Sales & discounts</h2>
+              <h2>Sales &#38; discounts</h2>
               <p>
                 Worldwide delivery on all. Authorit tively morph next-generation
                 innov tion with extensive models.
