--- a/Seminar_9/HomeWorks9/index.html
+++ b/Seminar_9/HomeWorks9/index.html
@@ -166,40 +166,55 @@
 
     <footer>
       <div class="container">
-        <section class="section_item1">
-          <article>
+        <div class="section1">
+          <section class="section_item1">
+            <article>
+              <div>
+                <img src="img/Footer_img1.png" alt="Footer_img1" />
+                <h2>Free Delivery</h2>
+                <p>
+                  Worldwide delivery on all. Authorit tively morph
+                  next-generation innov tion with extensive models.
+                </p>
+              </div>
+            </article>
+            <article>
+              <div>
+                <img src="img/Footer_img2.png" alt="Footer_img2" />
+                <h2>Sales &#38; discounts</h2>
+                <p>
+                  Worldwide delivery on all. Authorit tively morph
+                  next-generation innov tion with extensive models.
+                </p>
+              </div>
+            </article>
+            <article>
+              <div>
+                <img src="img/Footer_img3.png" alt="Footer_img3" />
+                <h2>Quality assurance</h2>
+                <p>
+                  Worldwide delivery on all. Authorit tively morph
+                  next-generation innov tion with extensive models.
+                </p>
+              </div>
+            </article>
+          </section>
+        </div>
+        <div class="section2">
+          <section class="section_item2">
             <div>
-              <img src="img/Footer_img1.png" alt="Footer_img1" />
-              <h2>Free Delivery</h2>
+              <img src="img/footer_avatar.png" alt="footer_avatar" />
               <p>
-                Worldwide delivery on all. Authorit tively morph next-generation
-                innov tion with extensive models.
+                “Vestibulum quis porttitor dui! Quisque viverra nunc mi, a
+                pulvinar purus condimentum“
               </p>
             </div>
-          </article>
-          <article>
-            <div>
-              <img src="img/Footer_img2.png" alt="Footer_img2" />
-              <h2>Sales &#38; discounts</h2>
-              <p>
-                Worldwide delivery on all. Authorit tively morph next-generation
-                innov tion with extensive models.
-              </p>
-            </div>
-          </article>
-          <article>
-            <div>
-              <img src="img/Footer_img3.png" alt="Footer_img3" />
-              <h2>Quality assurance</h2>
-              <p>
-                Worldwide delivery on all. Authorit tively morph next-generation
-                innov tion with extensive models.
-              </p>
-            </div>
-          </article>
-        </section>
-        <section class="section_item2"></section>
-        <section class="section_item3"></section>
+            <div></div>
+          </section>
+        </div>
+        <div class="section3">
+          <section class="section_item3"></section>
+        </div>
       </div>
     </footer>
   </body>
