--- a/Seminar_9/HomeWorks9/index.html
+++ b/Seminar_9/HomeWorks9/index.html
@@ -202,14 +202,18 @@
         </div>
         <div class="section2">
           <section class="section_item2">
-            <div>
+            <div class="section_item2_left">
               <img src="img/footer_avatar.png" alt="footer_avatar" />
               <p>
                 “Vestibulum quis porttitor dui! Quisque viverra nunc mi, a
                 pulvinar purus condimentum“
               </p>
             </div>
-            <div></div>
+            <div class="section_item2_right">
+              <p>SUBSCRIBE<br><span>NEWLETTER AND PROMOTION</span></p>
+              <input type="text">
+              <input type="submit">
+            </div>
           </section>
         </div>
         <div class="section3">
