--- a/Seminar_9/HomeWorks9/index.html
+++ b/Seminar_9/HomeWorks9/index.html
@@ -210,9 +210,15 @@
               </p>
             </div>
             <div class="section_item2_right">
-              <p>SUBSCRIBE<br><span>NEWLETTER AND PROMOTION</span></p>
-              <input type="text">
-              <input type="submit">
+              <p>
+                SUBSCRIBE<br /><span class="footer_span"
+                  >FOR OUR NEWLETTER AND PROMOTION</span
+                >
+              </p>
+              <form action="#">
+                <input type="email" value="Enter Your Email" />
+                <input type="submit" value="Subscribe" />
+              </form>
             </div>
           </section>
         </div>
