--- a/Seminar_9/HomeWorks9/index.html
+++ b/Seminar_9/HomeWorks9/index.html
@@ -157,7 +157,7 @@
 
           <div class="bottom_btn">
             <div>
-              <button><p>Browse All Product</p></button>
+              <button>Browse All Product</button>
             </div>
           </div>
         </div>
