--- a/Seminar_9/HomeWorks9/index.html
+++ b/Seminar_9/HomeWorks9/index.html
@@ -68,87 +68,88 @@
                   <span class="span_color">ACCESORIES</span>
                 </p>
               </div>
-
               <div class="bottom_content_item">
                 <h2>Fetured Items</h2>
                 <p>Shop for items based on what we featured in this week</p>
               </div>
-              <div class="bottom_content">
-                <div class="bottom_content_item1">
-                  <img src="img/fetured_items1.png" alt="fetured_items1" />
-                  <div>
-                    <h2>ELLERY X M'O CAPSULE</h2>
-                    <p>
-                      Known for her sculptural takes on traditional tailoring,
-                      Australian arbiter of cool Kym Ellery teams up with Moda
-                      Operandi.
-                    </p>
-                    <span class="span_color">52$</span>
+              <div>
+                <div class="bottom_content">
+                  <div class="bottom_content_item1">
+                    <img src="img/fetured_items1.png" alt="fetured_items1" />
+                    <div>
+                      <h2>ELLERY X M'O CAPSULE</h2>
+                      <p>
+                        Known for her sculptural takes on traditional tailoring,
+                        Australian arbiter of cool Kym Ellery teams up with Moda
+                        Operandi.
+                      </p>
+                      <span class="span_color">52$</span>
+                    </div>
                   </div>
-                </div>
 
-                <div class="bottom_content_item2">
-                  <img src="img/fetured_items2.png" alt="fetured_items2" />
-                  <div>
-                    <h2>ELLERY X M'O CAPSULE</h2>
-                    <p>
-                      Known for her sculptural takes on traditional tailoring,
-                      Australian arbiter of cool Kym Ellery teams up with Moda
-                      Operandi.
-                    </p>
-                    <span class="span_color">52$</span>
+                  <div class="bottom_content_item2">
+                    <img src="img/fetured_items2.png" alt="fetured_items2" />
+                    <div>
+                      <h2>ELLERY X M'O CAPSULE</h2>
+                      <p>
+                        Known for her sculptural takes on traditional tailoring,
+                        Australian arbiter of cool Kym Ellery teams up with Moda
+                        Operandi.
+                      </p>
+                      <span class="span_color">52$</span>
+                    </div>
                   </div>
-                </div>
 
-                <div class="bottom_content_item3">
-                  <img src="img/fetured_items3.png" alt="fetured_items3" />
-                  <div>
-                    <h2>ELLERY X M'O CAPSULE</h2>
-                    <p>
-                      Known for her sculptural takes on traditional tailoring,
-                      Australian arbiter of cool Kym Ellery teams up with Moda
-                      Operandi.
-                    </p>
-                    <span class="span_color">52$</span>
+                  <div class="bottom_content_item3">
+                    <img src="img/fetured_items3.png" alt="fetured_items3" />
+                    <div>
+                      <h2>ELLERY X M'O CAPSULE</h2>
+                      <p>
+                        Known for her sculptural takes on traditional tailoring,
+                        Australian arbiter of cool Kym Ellery teams up with Moda
+                        Operandi.
+                      </p>
+                      <span class="span_color">52$</span>
+                    </div>
                   </div>
-                </div>
 
-                <div class="bottom_content_item4">
-                  <img src="img/fetured_items4.png" alt="fetured_items4" />
-                  <div>
-                    <h2>ELLERY X M'O CAPSULE</h2>
-                    <p>
-                      Known for her sculptural takes on traditional tailoring,
-                      Australian arbiter of cool Kym Ellery teams up with Moda
-                      Operandi.
-                    </p>
-                    <span class="span_color">52$</span>
+                  <div class="bottom_content_item4">
+                    <img src="img/fetured_items4.png" alt="fetured_items4" />
+                    <div>
+                      <h2>ELLERY X M'O CAPSULE</h2>
+                      <p>
+                        Known for her sculptural takes on traditional tailoring,
+                        Australian arbiter of cool Kym Ellery teams up with Moda
+                        Operandi.
+                      </p>
+                      <span class="span_color">52$</span>
+                    </div>
                   </div>
-                </div>
 
-                <div class="bottom_content_item5">
-                  <img src="img/fetured_items5.png" alt="fetured_items5" />
-                  <div>
-                    <h2>ELLERY X M'O CAPSULE</h2>
-                    <p>
-                      Known for her sculptural takes on traditional tailoring,
-                      Australian arbiter of cool Kym Ellery teams up with Moda
-                      Operandi.
-                    </p>
-                    <span class="span_color">52$</span>
+                  <div class="bottom_content_item5">
+                    <img src="img/fetured_items5.png" alt="fetured_items5" />
+                    <div>
+                      <h2>ELLERY X M'O CAPSULE</h2>
+                      <p>
+                        Known for her sculptural takes on traditional tailoring,
+                        Australian arbiter of cool Kym Ellery teams up with Moda
+                        Operandi.
+                      </p>
+                      <span class="span_color">52$</span>
+                    </div>
                   </div>
-                </div>
 
-                <div class="bottom_content_item6">
-                  <img src="img/fetured_items6.png" alt="fetured_items6" />
-                  <div>
-                    <h2>ELLERY X M'O CAPSULE</h2>
-                    <p>
-                      Known for her sculptural takes on traditional tailoring,
-                      Australian arbiter of cool Kym Ellery teams up with Moda
-                      Operandi.
-                    </p>
-                    <span class="span_color">52$</span>
+                  <div class="bottom_content_item6">
+                    <img src="img/fetured_items6.png" alt="fetured_items6" />
+                    <div>
+                      <h2>ELLERY X M'O CAPSULE</h2>
+                      <p>
+                        Known for her sculptural takes on traditional tailoring,
+                        Australian arbiter of cool Kym Ellery teams up with Moda
+                        Operandi.
+                      </p>
+                      <span class="span_color">52$</span>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -224,12 +225,21 @@
         </div>
         <div class="section3">
           <section class="section_item3">
-            <div> <p>© 2022  Brand  All Rights Reserved.</p> </div>
+            <div><p>© 2022 Brand All Rights Reserved.</p></div>
             <div>
-              <img src="img/footer_icon_facebook.png" alt="footer_icon_facebook">
-              <img src="img/footer_icon_instagram.png" alt="footer_icon_instagram">
-              <img src="img/footer_icon_p.png" alt="footer_icon_p">
-              <img src="img/footer_icon_twitter.png" alt="footer_icon_twitter">
+              <img
+                src="img/footer_icon_facebook.png"
+                alt="footer_icon_facebook"
+              />
+              <img
+                src="img/footer_icon_instagram.png"
+                alt="footer_icon_instagram"
+              />
+              <img src="img/footer_icon_p.png" alt="footer_icon_p" />
+              <img
+                src="img/footer_icon_twitter.png"
+                alt="footer_icon_twitter"
+              />
             </div>
           </section>
         </div>
