--- a/Seminar_9/HomeWorks9/index.html
+++ b/Seminar_9/HomeWorks9/index.html
@@ -227,19 +227,27 @@
           <section class="section_item3">
             <div><p>© 2022 Brand All Rights Reserved.</p></div>
             <div>
-              <img
-                src="img/footer_icon_facebook.png"
-                alt="footer_icon_facebook"
-              />
-              <img
-                src="img/footer_icon_instagram.png"
-                alt="footer_icon_instagram"
-              />
-              <img src="img/footer_icon_p.png" alt="footer_icon_p" />
-              <img
-                src="img/footer_icon_twitter.png"
-                alt="footer_icon_twitter"
-              />
+              <div>
+                <img
+                  src="img/footer_icon_facebook.png"
+                  alt="footer_icon_facebook"
+                />
+              </div>
+              <div>
+                <img
+                  src="img/footer_icon_instagram.png"
+                  alt="footer_icon_instagram"
+                />
+              </div>
+              <div>
+                <img src="img/footer_icon_p.png" alt="footer_icon_p" />
+              </div>
+              <div>
+                <img
+                  src="img/footer_icon_twitter.png"
+                  alt="footer_icon_twitter"
+                />
+              </div>
             </div>
           </section>
         </div>
