--- a/Seminar_6/HomeWorks6/index.html
+++ b/Seminar_6/HomeWorks6/index.html
@@ -62,7 +62,7 @@
               <div class="top_content_item4">
                 <img src="img/main_img4.png" alt="main_img4" />
                 <p>
-                  LUXIROUS & TRENDY <br />
+                  LUXIROUS \& TRENDY <br />
                   <span class="span_color">ACCESORIES</span>
                 </p>
               </div>
@@ -161,7 +161,6 @@
             </article>
           </div>
         </div>
-        
       </div>
     </main>
   </body>
