--- a/Seminar_7/HomeWorks7/index.html
+++ b/Seminar_7/HomeWorks7/index.html
@@ -19,6 +19,7 @@
             <img src="img/nav1.png" alt="nav1" />
             <img src="img/nav2.png" alt="nav2" />
             <img src="img/nav3.png" alt="nav3" />
+            <div class="nav_basket"><p>5</p></div>
           </div>
         </nav>
 
@@ -62,7 +63,7 @@
               <div class="top_content_item4">
                 <img src="img/main_img4.png" alt="main_img4" />
                 <p>
-                  LUXIROUS & TRENDY <br />
+                  LUXIROUS \& TRENDY <br />
                   <span class="span_color">ACCESORIES</span>
                 </p>
               </div>
@@ -153,13 +154,11 @@
             </div>
           </section>
 
-          
-            <div class="bottom_btn">
-              <div>
-                <button><p>Browse All Product</p></button>
-              </div>
+          <div class="bottom_btn">
+            <div>
+              <button><p>Browse All Product</p></button>
             </div>
-          
+          </div>
         </div>
       </div>
     </main>
